# cookiecutter_pyproject

./: HISTORY.rst  README.rst  cookiecutter.json  pyproject.toml
hooks/: pre_gen_project.py
tests/: test_cookiecutter.py  util.py
{{ cookiecutter.directory_name }}/: .gitignore  DEVELOP.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml
{{ cookiecutter.directory_name }}/docs/: conf.py  index.rst
{{ cookiecutter.directory_name }}/tests/: test_cli.py  test_test.py  util.py
{{ cookiecutter.directory_name }}/{{ cookiecutter.directory_name }}/: cli.py  util.py
