[build-system]
requires = ["poetry>=1.2.0b2"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "Insert Description"
license = "{{ cookiecutter.licence }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
maintainers = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.rst"
packages = [
    { include = "{{ cookiecutter.directory_name }}" },
]
include = [
    "{{ cookiecutter.directory_name }}/templates",
]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
click = ">=7.1.2"
jinja2 = ">=3.1.2"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.3"
sphinx = ">=5.2.0"
virtualenv = ">=20.10.0"
poetry-bumpversion = ">=0.2.0"
python-decouple = ">=3.6"

# BUMPVERSION
[tool.poetry_bumpversion.file."pycomex/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.poetry_bumpversion.file."pycomex/VERSION"]
search = "{current_version}"
replace = "{new_version}"

[tool.poetry_bumpversion.file."README.rst"]
search = "{current_version}"
replace = "{new_version}"